  development and don't want to have massive log files.)
* The default sizes for the `lru-size` and `upload-queue-size` settings
  have been reduced, to reduce the memory impact of Obnam.

Bug fixes:

* If listing extended attributes for a filesystem that does not support
  them, Obnam no longer crashes, just silently does not backup extended
  attributes. Which aren't there anyway.

Version 1.3, released 2012-12-16
--------------------------------

* When creating files in the backup repository, Obnam tries to avoid NFS
  synchronisation problems by first writing a temporary file and then
  creating a hardlink to the actual filename. This works badly on filesystems
  that do not allow hard links, such as VFAT. If creating the hardlink
  fails, Obnam now further tries to use the `open(2)` system call with
  the `O_EXCL` flag to create the target file. This should allow things
  to work with both NFS and VFAT.
* More detailed progress reporting during the backup.
* Manual page now covers the diff subcommand. Patch by Peter Valdemar Mørch.
* Speed optimisation patch for backing up files in inode numbering order,
  from Christophe Vu-Brugier.
* A setuid or setgid bit is now not restored if Obnam is not used by root
  or the same user as the owner of the restored file.
* Many new settings to control "obnam fsck", mainly to reduce the amount
  of checking being done in order to make it faster. However, fsck is
  has lost some features (checks), which will be added back in a future
  release.
* More frequent fsck progress reporting. Some speed optimisations to fsck.

Bug fixes:

* Empty values for extended attributes are now backed up correctly.
  Previously they would cause an infinite loop.
* Extended attributes without values are now ignored. This is different
  from attributes with empty values. Reported by Vladimir Elisseev.
* An empty port number in sftp URLs is now handled correctly. Found based
  on report by Anton Shevtsov.